# django-salesman-paypal

./: CHANGELOG.md  README.md  pyproject.toml
.github/: CONTRIBUTING.md  pull_request_template.md
example/: README.md
example/project/: settings.py  urls.py
example/shop/: admin.py  models.py
example/shop/migrations/: 0001_initial.py
example/shop/templates/: checkout.html
salesman_paypal/: __init__.py  conf.py  payment.py
salesman_paypal/templates/salesman_paypal/: cancel.html  return.html
