[tool.poetry]
name = "django-salesman-paypal"
version = "0.1.6"
description = "PayPal payment integration for Salesman."
authors = ["Dino Perovic <dino.perovic@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://pypi.org/project/django-salesman-paypal/"
repository = "https://github.com/dinoperovic/django-salesman-paypal"
keywords = ["PayPal", "Salesman", "e-commerce"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet",
]
packages = [
    {include = "salesman_paypal"},
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
django-salesman = ">=1.1.3"
paypal-checkout-serversdk = "~1.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "*"
isort = "5.12.0"
black = "22.12.0"
flake8 = "6.0.0"
mypy = "0.991"

[tool.isort]
profile = "black"
known_first_party = ["salesman_paypal"]
known_third_party = ["salesman"]

[tool.mypy]
exclude = ["example"]
ignore_missing_imports = true
strict = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
